# AgentUI

./: .gitignore  LICENSE  README.md  check_env.py  clean_for_github.bat  install_deps.bat  start_all.bat  stop_all.bat
agent_core/: config.yaml  main.py  pyproject.toml
agent_core/api/: routes.py
agent_core/core/: agent_manager.py  config.py
backend/: config.yaml  main.py  pyproject.toml
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: settings.py  system.py  tasks.py  tools.py  upload.py
backend/app/core/: config.py  database.py
backend/app/models/: task.py  user.py
backend/app/schemas/: task.py
backend/app/services/: agent_service.py  config_service.py
backend/configs/: app_config.json  database_config.json  service_config.json
frontend/: package.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: APIDocGenerator.tsx  ChartGenerator.tsx  Dashboard.tsx  Navigation.tsx  PPTGenerator.tsx  ScheduleManager.tsx  Settings.tsx  TaskDetail.tsx  TaskManager.tsx
frontend/src/services/: apiService.ts  configService.ts
frontend/src/theme/: index.ts
tool_services/api_doc_generator_service/: main.py  pyproject.toml
tool_services/chart_generator_service/: main.py  pyproject.toml
tool_services/ppt_generator_service/: main.py  pyproject.toml
tool_services/schedule_reminder_service/: main.py  pyproject.toml
