[tool.poetry]
name = "chart-generator-service"
version = "0.1.0"
description = "图表生成器 MCP 服务"
authors = ["AI Assistant <ai@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
plotly = "^5.17.0"
pandas = "^2.1.0"
numpy = "^1.25.0"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 